<resources>
    <string name="app_name">TODOwanandroid</string>
    <string name="version_name">Version:1.0.2-alpha</string>
    <string name="login_user_name_hint">username</string>
    <string name="login_password_hint">password</string>
    <string name="login_repeat_password_hint">repeat password</string>
    <string name="action_sign_in">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="register">Register</string>
    <string name="me">Me</string>
    <string name="todo">Todo</string>
    <string name="me_version">Version</string>
    <string name="me_rate">Rate</string>
    <string name="me_git_hub">Source code on GitHub</string>
    <string name="me_email">Feedback by E-mail</string>
    <string name="me_about">About</string>
    <string name="me_logout">Logout</string>
    <string name="apache_license">file:///android_asset/apache_license.html</string>
    <string name="subject">About:</string>

    <string name="sign_out">Sign Out</string>
    <string name="kill_app">Kill App</string>
    <string name="cancel">Cancel</string>
    <string name="dialog_close">Close</string>

    <string name="TodoTypeZero">Only</string>
    <string name="TodoTypeOne">Work</string>
    <string name="TodoTypeTwo">Learn</string>
    <string name="TodoTypeThree">Life</string>

    <string name="TodoItemPlanTime">PlanTime:</string>
    <string name="TodoItemCompleteTime">CompleteTime:</string>

    <string name="TodoItemIncomplete">Incomplete</string>
    <string name="TodoItemCompleted">Completed</string>
    <string name="TodoItemDelete">Delete</string>

    <string-array name="TodoTabTitle">
        <item>@string/TodoItemIncomplete</item>
        <item>@string/TodoItemCompleted</item>
    </string-array>
    <string-array name="TodoItemManage">
        <item>@string/TodoItemIncomplete</item>
        <item>@string/TodoItemCompleted</item>
        <item>@string/TodoItemDelete</item>
    </string-array>



    <string name="TodoItem">TODO</string>


    <string name="dialogTitle">Note</string>
    <string name="dialogMessage">Confirm to delete?</string>
    <string name="dialogOk">Confirm</string>
    <string name="dialogCancel">Cancel</string>

    <string name="itemTitle">Title</string>
    <string name="itemDetail">Detail</string>
    <string name="itemRequired">Required</string>
    <string name="itemOptional">Optional</string>
    <string name="itemSave">Save</string>

    <string name="loadNoMoreData">no more data</string>

    <string name="accountUserNameError">userName must not be empty</string>
    <string name="accountPasswordError">password must be at least 6 characters</string>
    <string name="accountRePasswordError">two passwords do not match</string>

</resources>