<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <TextView

            android:id="@+id/signOutTv"
            android:background="?android:selectableItemBackground"
            android:gravity="center"
            android:text="@string/sign_out"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tool_bar_vertical"/>

    <TextView
            android:id="@+id/killAppTv"
            android:background="?android:selectableItemBackground"
            android:gravity="center"
            android:text="@string/kill_app"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tool_bar_vertical"/>

    <View
            style="@style/HorizontalDividerStyle"
            android:layout_height="@dimen/view_vertical_margin_small"
            />

    <TextView
            android:id="@+id/cancelTv"
            android:background="?android:selectableItemBackground"
            android:gravity="center"
            android:text="@string/cancel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/tool_bar_vertical"/>
</LinearLayout>