<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:cardView="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
                name="viewModel"
                type="com.aqrlei.open.todowanandroid.tasks.main.MeViewModel"/>

    </data>

    <ScrollView
            android:fillViewport="false"
            android:overScrollMode="never"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                    android:layout_margin="@dimen/view_horizontal_margin_small"
                    android:layout_width="match_parent"
                    cardView:cardCornerRadius="@dimen/card_corner_radius"
                    cardView:cardElevation="@dimen/card_elevation"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:background="?android:selectableItemBackground"
                        android:layout_width="match_parent"
                        android:orientation="horizontal"
                        android:layout_height="wrap_content">

                    <ImageView
                            android:layout_width="65dp"
                            android:layout_height="65dp"
                            android:scaleType="fitCenter"
                            android:src="@mipmap/ic_launcher"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:gravity="center_vertical"
                            android:layout_marginLeft="@dimen/view_horizontal_margin_small"
                            android:ellipsize="end"
                            android:text="@{viewModel.userName}"
                            android:textSize="@dimen/text_size_large"
                            tools:text="昵称"
                            android:layout_height="match_parent"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                    android:layout_margin="@dimen/view_horizontal_margin_small"
                    android:layout_width="match_parent"
                    cardView:cardCornerRadius="@dimen/card_corner_radius"
                    cardView:cardElevation="@dimen/card_elevation"
                    android:layout_height="wrap_content">

                <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    <TextView
                            style="@style/NavigationTextStyle"
                            android:drawableLeft="@mipmap/ic_shop"
                            android:onClick="@{()->viewModel.rate()}"
                            android:text="@string/me_rate"/>


                    <TextView
                            style="@style/NavigationTextStyle"
                            android:drawableLeft="@mipmap/ic_github"
                            android:onClick="@{()->viewModel.gotoGitHub()}"
                            android:text="@string/me_git_hub"/>

                    <TextView
                            style="@style/NavigationTextStyle"
                            android:drawableLeft="@mipmap/ic_email"
                            android:onClick="@{()->viewModel.feedbackByEmail()}"
                            android:text="@string/me_email"/>

                    <TextView
                            style="@style/NavigationTextStyle"
                            android:onClick="@{()->viewModel.gotoAbout()}"
                            android:drawableLeft="@mipmap/ic_info"
                            android:text="@string/me_about"/>


                </LinearLayout>
            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                    android:layout_margin="@dimen/view_horizontal_margin_large"
                    android:layout_width="match_parent"
                    cardView:cardCornerRadius="@dimen/card_corner_radius"
                    android:onClick="@{()->viewModel.logout()}"
                    cardView:cardElevation="@dimen/card_elevation"
                    android:layout_height="wrap_content">

                <TextView
                        style="@style/NavigationTextStyle"
                        android:gravity="center_horizontal"
                        android:text="@string/me_logout"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>
</layout>