<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
                name="viewModel"
                type="com.aqrlei.open.todowanandroid.tasks.account.AccountViewModel"/>
    </data>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            tools:context=".tasks.account.LoginActivity">
        <androidx.appcompat.widget.Toolbar
                android:id="@+id/titleToolBar"
                android:paddingBottom="@dimen/view_vertical_margin"
                android:layout_width="match_parent"
                android:layout_height="@dimen/tool_bar_vertical"/>
        <ScrollView
                android:fillViewport="false"
                android:overScrollMode="never"
                android:scrollbars="none"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:errorMsg="@{viewModel.userNameErrorLiveData}"
                        android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/login_user_name_hint"
                            android:imeOptions="actionNext"
                            android:text="@={viewModel.userNameLiveData}"
                            android:maxLength="20"
                            android:maxLines="1"
                            android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:errorMsg="@{viewModel.passwordErrorLiveData}"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/login_password_hint"
                            android:text="@={viewModel.passwordLiveData}"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLength="20"
                            android:maxLines="1"
                            android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:errorMsg="@{viewModel.rePasswordErrorLiveData}"
                        android:layout_height="wrap_content"
                        app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/login_repeat_password_hint"
                            android:text="@={viewModel.rePasswordLiveData}"
                            android:imeOptions="actionDone"
                            android:inputType="textPassword"
                            android:maxLength="20"
                            android:maxLines="1"
                            android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                        android:onClick="@{() ->viewModel.register()}"
                        style="?android:textAppearanceMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textAllCaps="false"
                        android:backgroundTint="@color/colorAccent"
                        android:padding="16dp"
                        android:text="@string/action_sign_in"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>
            </LinearLayout>
        </ScrollView>


    </LinearLayout>
</layout>
